# code-reviewer

./: .dockerignore  .gitignore  README.md  agent.py  alembic.ini  eval.py  eval_sl100_docs.py  eval_sl100_logs.py  eval_sl100_product.py  eval_sl100_real_cases.py  main.py  pyproject.toml  sl100_agent.py  sl100_config.py  sl100_diagnose.py  sl100_docs_qa.py  sl100_es.py  sl100_es_logs.py  sl100_incident.py  sl100_log_agent.py  sl100_log_core.py  sl100_mcp_server.py  sl100_planner.py  sl100_real_cases.py  sl100_remote.py  sl100_remote_logs.py  sl100_review_cases.py  sl100_rules.py
.github/workflows/: team-ci.yml
configs/: sl100.example.json
deploy/: .env.example  Caddyfile  Dockerfile  backup.sh  docker-compose.dev.yml  docker-compose.yml
deploy/monitoring/: prometheus.yml  rules.yml
docs/: command-migration.md  sl100-es-logs.md  sl100-ops-agent-case-study.md  sl100-ops-agent-demo.md  sl100-ops-agent-interview.md  sl100-team-deployment.md
evals/: sl100_doc_cases.json  sl100_log_cases.json  sl100_product_cases.json
examples/code-reviewer-tutorial/: README.md  agent.py  eval.py  main.py  test_sample.py
examples/code-reviewer-tutorial/go-tools/: go.mod  main.go
mcp/: sl100-mcp-config.example.json
migrations/: env.py
migrations/versions/: 20260713_0001_team_local_accounts.py  20260716_0002_controlled_agent.py
scripts/: backup_team.sh  deploy_team.sh  restore_team.sh  test_sl100_mcp.py
src/iot_ops_agent/: __init__.py  __main__.py  config.py
src/iot_ops_agent/agent/: __init__.py  mcp_server.py  tools.py
src/iot_ops_agent/cli/: __init__.py  docs_qa.py  es_logs.py  log_agent.py  main.py  remote_logs.py  rules.py
src/iot_ops_agent/diagnosis/: __init__.py  diagnose.py  incident.py  incident_types.py  log_core.py  planner.py  real_cases.py
src/iot_ops_agent/evaluation/: __init__.py  docs.py  logs.py  product.py  real_cases.py  review_cases.py
src/iot_ops_agent/integrations/: __init__.py  elasticsearch.py  remote.py
src/iot_ops_agent/resources/: MQTT_WebSocket_对接技术文档.md  SL100服务架构与部署说明.md  __init__.py
src/iot_ops_agent/web/: __init__.py  accounts.py  admin.py  api.py  (+11 more)
team_app/: accounts.py  admin.py  api.py  config.py  db.py  maintenance.py  models.py  notifications.py  reconciler.py  services.py  tasks.py  worker.py
team_app/static/: app.css  app.js  index.html
tests/: test_auth_store.py  test_cli_surface.py  test_controlled_agent.py  test_repository_layout.py  test_sl100_es.py  test_sl100_product.py  test_sl100_real_cases.py  test_sl100_remote.py  test_team_api_surface.py  test_team_integration.py  test_team_local_auth.py  test_team_reliability.py  test_team_workspace.py
tools/go-log-tools/: go.mod  main.go  main_test.go
(+5 files in other folders)
