[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.4.1",
    "anthropic>=0.105.2",
    "fastapi>=0.115.12",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.2.2",
    "redis>=5.2.1",
    "rq>=2.1.0",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
]
